--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebXRUnity.loader.js";
+      var loaderUrl = buildUrl + "/WebXRText.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebXRUnity.data",
-        frameworkUrl: buildUrl + "/WebXRUnity.framework.js",
-        codeUrl: buildUrl + "/WebXRUnity.wasm",
+        dataUrl: buildUrl + "/WebXRText.data",
+        frameworkUrl: buildUrl + "/WebXRText.framework.js",
+        codeUrl: buildUrl + "/WebXRText.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
